src/test/deca/extension/synt/valid/test_tab_float_acces_1.deca
{
    float[][] matrix;
    float element1,element2,element3;
    matrix = [[1.0, 2.0], [3.0, 4.0]];
    element1 = matrix[0][0]; 
    element2 = matrix[0][1]; 
    element3 = matrix[1][1]; 
    print("Element at (0, 1): " + element2);
    printx(element2,element3);
}