src/test/deca/extension/synt/invalid/test_invalid_00.deca
{
    int [] tab=[1.1;1.2];
}